# alvey_prog_15-16

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  convert_string.cpp  convert_string.h  makefile
binary_search/: binary_search  makefile
binary_search/source/: main.cpp  manager.cpp  manager.h
dependencies/: CMakeLists.txt  color_codes.cpp  color_codes.h  constants.h  convert_string.cpp  convert_string.h  fail_handler.cpp  fail_handler.h  get_stripped_input.cpp  get_stripped_input.h  input_handler.cpp  input_handler.h  is_integer.h  is_unsigned_integer.h  rand_range.cpp  rand_range.h
dependencies/patch/: stoi.h  to_string.h
dictionaries/: american-english-no-accents.txt  american-english.txt
encryption/: encryption  makefile
encryption/source/: manager.cpp  manager.h
explorer/: CMakeLists.txt  main.cpp  make_manager.cpp  make_manager.h  manager.cpp  manager.h  project_identifier.h  project_selector.cpp  project_selector.h
game_of_pig/: game_of_pig  makefile
game_of_pig/source/: main.cpp  manager.cpp  manager.h
hang_man/: hang_man  makefile
hang_man/source/: main.cpp  manager.cpp  manager.h  word_handler.cpp  word_handler.h
hang_man/text_images/: man
mad_lib_game/: mad_lib_game  makefile
mad_lib_game/source/: constants.h  file_selector.cpp  main.cpp  manager.cpp
projects/: CMakeLists.txt
projects/binary_search/: makefile  manager.cpp  manager.h
projects/encryption/: makefile  manager.cpp  manager.h
projects/game_of_pig/: makefile  manager.cpp  manager.h
projects/hang_man/: makefile  manager.cpp  manager.h
(+28 files in other folders)
